ICA/mock/mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mtls-strict
  namespace: default
spec:
  selector:
    matchLabels:
      mtls: strict
  mtls:
    mode: STRICT
  portLevelMtls:
    9000:
      mode: DISABLE
