ICA/mock/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-09-02T14:56:40Z"
  labels:
    app: orders
  name: orders
  namespace: orders
  resourceVersion: "5002"
  uid: 1e711916-17af-476f-b193-bccd987e55af
spec:
  clusterIP: 10.96.189.123
  clusterIPs:
  - 10.96.189.123
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: orders
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
