ICA/mock/orders-shifting.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: orders
spec:
  hosts:
    - orders
  http:
  - route:
    - destination:
        host: orders
        subset: v1
      weight: 30
    - destination:
        host: orders
        subset: v2
      weight: 70
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders
spec:
  host: orders
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
